Replace react-helmet with react-helmet-async to fix UNSAFE_componentWillMount warning

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lucide-react": "^0.285.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "stripe": "^19.1.0",
     "tailwind-merge": "^1.1.4",
     "tailwindcss-animate": "^1.0.7"
