Add Expression of Interest section, hide pricing/checkout temporarily
- Created ExpressionOfInterestSection component with form for name, email, phone, suburb
- Added pricing display with ,900 crossed out → git commit -m "Add Expression of Interest section, hide pricing/checkout temporarily

- Created ExpressionOfInterestSection component with form for name, email, phone, suburb
- Added pricing display with $2,900 crossed out → $1,900 offer
- Integrated Sheet.best API for Google Sheets data collection
- Updated navigation links from 'pricing' to 'expression-of-interest'
- Commented out PricingSection and CheckoutSection (easy to restore)
- Added setup documentation for Sheet.best integration",900 offer
- Integrated Sheet.best API for Google Sheets data collection
- Updated navigation links from 'pricing' to 'expression-of-interest'
- Commented out PricingSection and CheckoutSection (easy to restore)
- Added setup documentation for Sheet.best integration

--- a/env.example
+++ b/env.example
@@ -10,3 +10,7 @@ VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
 
 # Stripe Webhook Secret (for webhook verification)
 # STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Sheet.best Configuration (for Expression of Interest form)
+# Get your endpoint from https://sheet.best after connecting your Google Sheet
+# VITE_SHEET_BEST_URL=https://sheet.best/api/v1/sheets/YOUR_SHEET_ID
