EOI: send email notification via webhook or EmailJS (configurable)

--- a/env.example
+++ b/env.example
@@ -14,3 +14,12 @@ VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
 # Sheet.best Configuration (for Expression of Interest form)
 # Get your endpoint from https://sheet.best after connecting your Google Sheet
 # VITE_SHEET_BEST_URL=https://sheet.best/api/v1/sheets/YOUR_SHEET_ID
+
+# Optional: Email notifications
+# 1) Webhook (Zapier/Make): receive JSON and send email to carl@unitstrength.com.au
+# VITE_FORM_EMAIL_WEBHOOK_URL=https://hooks.zapier.com/hooks/catch/xxxx/yyyy
+
+# 2) EmailJS (no SDK) fallback
+# VITE_EMAILJS_SERVICE_ID=your_service_id
+# VITE_EMAILJS_TEMPLATE_ID=your_template_id
+# VITE_EMAILJS_PUBLIC_KEY=your_public_key
